Fix dropdown's arrow position
Before this commit, the text in a dropdown could be overlapped by the
triangle (arrow). Example: Insert > Page number dialog

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -519,7 +519,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 	font-family: var(--jquery-ui-font);
 	border: 1px solid #CCC;
 	border-radius: var(--border-radius);
-	padding: 0 4px;
+	padding: 0 14px 0 4px;
 	background-color: #F1F1F1;
 }
 
